tests/ui/mut/mutable-class-fields.stderr
error[E0594]: cannot assign to `nyan.how_hungry`, as `nyan` is not declared as mutable
  --> $DIR/mutable-class-fields.rs:15:3
   |
LL |   nyan.how_hungry = 0;
   |   ^^^^^^^^^^^^^^^^^^^ cannot assign
   |
help: consider changing this to be mutable
   |
LL |   let mut nyan : Cat = cat(52, 99);
   |       +++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0594`.
